--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,8 @@
     <title>Capstone Project - Using a public API</title>
 </head>
 <header>
-    <h1>Welcome to the Jungle</h1>
+    <h1>Welcome to the Forest</h1>
+    <p>Random Forest Wallpaper Generator</p>
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
