--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -6,8 +6,15 @@ header {
 
 h1 {
     font-size: 40px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     color: white;
+}
+
+header > p{
+    color: white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 0;
 }
 
 nav ul {
@@ -37,6 +44,7 @@ nav ul li a {
     width: 100%;
     position: fixed;
     bottom: 0;
+    display: block;
 }
 
 .footer p {
@@ -96,4 +104,55 @@ nav ul li a {
 body{
     background-image: url(/images/5386360.jpg);
     background-size: cover;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 40px;
+    padding-bottom: 70px;
+}
+
+.get-button{
+    padding: 10px;
+    margin: 0 auto;
+    background-color: rgb(173, 230, 204);
+    color: white;
+    display: block;
+    font-size: 20px;
+}
+
+.Walpapper {
+    max-height: 1080px ;
+    align-items: center;
+}
+
+@media only screen and (max-width: 768px) {
+    header {
+        padding: 10px;
+    }
+    
+    h1 {
+        font-size: 30px;
+    }
+    
+    nav ul li a {
+        font-size: 16px;
+    }
+    
+    .Wallpaper {
+        max-height: 300px; 
+        text-align: center;
+    }
+
+    .container {
+        flex-direction: column;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    
+    .get-button {
+        margin-top: 20px;
+    }
 }
